added the title and sub content to the top section of the landing page

--- a/index.html
+++ b/index.html
@@ -8,17 +8,24 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class = "header">
-        <div class =logo>Header Logo</div> 
-        <ul class="right-links" >
-        <li><a href="#">Header link one</a></li>
-        <li><a href="#">Header link two</a></li>
-        <li><a href="#">Header link three</a></li>
-    </div>
-    <div class="top">
-        <div class="title">This Website is awesome</div>
-        <img src="" alt="">
-    </div>
+    <div class="container">
+        <div class = "header">
+            <div class =logo>Header Logo</div> 
+            <ul class="right-links" >
+            <li><a href="#">Header link one</a></li>
+            <li><a href="#">Header link two</a></li>
+            <li><a href="#">Header link three</a></li>
+        </div>
+        <div class="top">
+            <div class="left">
+            <div class="title">This Website is awesome</div>
+            <div class="content">This Website has some subtext.in it that makes<br> it seem super cool
+                 This is subtext for the main <br>content of the beserker content!
+            </div>
+            </div>
+            <img src="./images/beserker.jpeg" alt="Guts in his beserker armour">
+        </div>
+</div>
     
 </body>
 </html>
