added sign in button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="content">This Website has some subtext.in it that makes<br> it seem super cool
                  This is subtext for the main <br>content of the beserker content!
             </div>
+            <button>Sign up</button>
             </div>
             <img src="./images/beserker.jpeg" alt="Guts in his beserker armour">
         </div>
