added the main content and images associated with it

--- a/index.html
+++ b/index.html
@@ -26,7 +26,31 @@
             </div>
             <img src="./images/beserker.jpeg" alt="Guts in his beserker armour">
         </div>
-</div>
+    </div>
+    <div class="container2">
+        <div class="header2"> Some random information.</div>
+        <div class="main">
+            <div class="info" >
+                <img src="./images/bigSword.jpeg" alt="">
+                <div class="text">this is some subtext under an illistration or image</div>
+            </div>
+            <div class="info" >
+                <img src="./images/half.jpeg" alt="">
+                <div class="text">this is some subtext under an illistration or image</div>
+            </div>
+            <div class="info" >
+                <img src="./images/moon.jpeg" alt="">
+                <div class="text">this is some subtext under an illistration or image</div>
+            </div>
+            <div class="info" >
+                <img src="./images/red.jpeg" alt="">
+                <div class="text">this is some subtext under an illistration or image</div>
+            </div>
+            
+
+        </div>
+
+    </div>
     
 </body>
 </html>
